refactor: rename employee management api path
